# blleqa

./: .gitignore  LICENSE.md  README.md  pyproject.toml
data/retrieved/: voyage3_test_nl.json
docs/: README.md
outputs/results_summary/: citation_fr.md  citation_nl.md  correctness_fr.md  correctness_nl.md  faithfulness_fr.md  faithfulness_nl.md  refusal_fr.md  refusal_nl.md
src/generation/: __init__.py  judge_selector.py
src/generation/cli/: build_context.py  evaluate_citations.py  evaluate_correctness.py  evaluate_faitfulness.py  evaluate_faithfulness.py  evaluate_refusals.py  generate.py  judge_selector.py
src/generation/evaluators/: __init__.py  citation_metrics.py  deepeval_metrics.py  judge_metrics.py  ragas_metrics.py  refusal.py
src/generation/judge_selection/: eval.py  metrics.py  schema.py
src/generation/model_configs/: claude-haiku-4.5.json  claude-sonnet-4.6.json  deepseek-v3.2.json  gemini-2.5-flash.json  gemini-3-flash.json  gemini-3.1-flash-lite.json  gemini-3.1-pro.json  gemma-3-12b-it.json  gemma-3-27b-it.json  gemma-3-4b-it.json  gemma-4-26b-a4b-it.json  gemma-4-31b-it.json  glm-4.7-flash.json  glm-4.7.json  glm-5.json  gpt-5-mini.json  gpt-5-nano.json  gpt-5.4.json  gpt-oss-120b.json  gpt-oss-20b.json  kimi-k2-thinking.json  kimi-k2.5.json  kimi-k2.json  llama-3.3-70b-instruct.json  llama-4-maverick.json  llama-4-scout.json  ministral-14b.json  ministral-3b.json  ministral-8b.json  mistral-large.json  nemotron-3-super-120b-a12b.json  (+8 more)
tests/: test_citation_metrics.py  test_deepeval_metrics.py  test_generate.py  test_ragas_metrics.py
(+5 files in other folders)
