[project]
name = "bbleqa"
version = "0.1.0"
description = "Benchmarlink LLMs for legal QA in Dutch and French"
authors = [
    {name = "Nikolay Banar",email = "nikc20008@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "deepeval (>=3.8.8,<4.0.0)",
    "openrouter (>=0.7.11,<0.8.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "datasets (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
